# wiki_museum_example

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  jupyter.dockerfile  museum_data_481725.csv  parser.dockerfile  pyproject.toml  requirements.txt  requirements_venv.txt  run_job.py  run_pkg.py  run_src.py
.venv311/: pyvenv.cfg
src/museum_data_compiler/: enricher.py  museum_data_compiler.py
src/museum_data_compiler/utils/: fetcher.py  museum.py
src/museum_parser/: enricher.py  parser.py
src/museum_parser/utils/: fetcher.py
tests/: detail-stub.html  test_parser.py
workspace/data/: PREFETCHED_SAMPLE_DATA.csv
workspace/notebooks/: simple_linear_regression_example.ipynb
workspace/notebooks/.ipynb_checkpoints/: simple_linear_regression_example-checkpoint.ipynb
