[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "museum_data_compiler"
version = "0.0.1"
authors = [
  { name="Daniel Ross" },
]

description = "A example package that parses a wikipedia page."
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/giantfnrobot/wiki_museum_example"
Issues = "https://github.com/giantfnrobot/wiki_museum_example/issues"

[tool.setuptools]
package-dir = {"" = "src/museum_data_compiler"}

# [tool.setuptools.package-dir]
# "parser" = "src"
# "parser.utils" = "src/utils"