[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "museum_parser"
version = "0.0.1"
authors = [
  { name="Daniel Ross" },
]

description = "A example package that parses a wikipedia page."
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/giantfnrobot/wiki_museum_example"
Issues = "https://github.com/giantfnrobot/wiki_museum_example/issues"

[tool.setuptools]
package-dir = {"" = "src/museum_parser"}

[tool.pytest.ini_options]
pythonpath = ["src/museum_parser"]